# langchain-rag-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
chunking/: semantic_chunking.ipynb
noteboook/: Documents.ipynb  chromadb.ipynb  embeddings.ipynb  pdfdataparsing.ipynb  pdfloader.ipynb
noteboook/chroma_langchain_db/: chroma.sqlite3
noteboook/data/text_fils/: problem_stmt.txt  req.txt
